# Nowa_CRM

./: .codex-connection-test.txt  .gitignore  README.md  pyproject.toml
.github/workflows/: windows-release.yml
docs/: MULTIUSER.md
scripts/: build_icon.py  release.ps1
src/nowa_crm/: __init__.py  app.py
src/nowa_crm/core/: __init__.py  auth.py  backup.py  central_server.py  database.py  database_factory.py  events.py  paths.py  phone.py  plugins.py  remote_database.py  updater.py
src/nowa_crm/integrations/: __init__.py  coligo.py  coligo_bridge.py  contracts.py  google_calendar.py  sip_monitor.py
src/nowa_crm/modules/: __init__.py
src/nowa_crm/modules/assets/: __init__.py  service.py
src/nowa_crm/modules/communications/: __init__.py  service.py
src/nowa_crm/modules/customer360/: __init__.py  service.py
src/nowa_crm/modules/customers/: __init__.py  importer.py  service.py
src/nowa_crm/modules/daystart/: __init__.py  service.py
src/nowa_crm/modules/documents/: __init__.py  (+1 more)
src/nowa_crm/ui/: __init__.py  approval_manager_dialog.py  assets_page.py  communications_page.py  customer360_page.py  dialogs.py  documents_page.py  icons.py  incoming_call_popup.py  integrations_page.py  login.py  mail_page.py  main_window.py  migration_page.py  missed_calls_page.py  multiuser_page.py  operations_page.py  planning_page.py  proposal_dialog.py  reporting_page.py  security_page.py  servicedesk_page.py  shomi_workbench_page.py  telephony_page.py  theme.py  vault_verification_dialog.py  workspace_page.py
tests/: test_platform.py  test_proposal_approval.py
(+30 files in other folders)
