[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "nowa-crm"
version = "3.0.0"
description = "Modulair CRM-platform voor NOWA Solutions"
requires-python = ">=3.12"
dependencies = ["PySide6>=6.8", "cryptography>=44", "reportlab>=4.2"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.9"]

[project.scripts]
nowa-crm = "nowa_crm.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

